[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tax-lot-tracker"
version = "0.1.0"
description = "A CLI tool for crypto tax lot tracking with FIFO/LIFO/HIFO cost basis methods"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
tax-lot-tracker = "tax_lot_tracker.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
